# protoc-gen-rust-aip

./: .gitignore  CONTRIBUTING.md  Cargo.toml  DESIGN.md  IMPLEMENTATION.md  LICENSE  Makefile  PROJECT_STRUCTURE.md  README.md  RELEASING.md  SECURITY.md  build-go.sh  go.mod  go.sum  main.go  test_types.go
.devcontainer/: devcontainer.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md
.github/workflows/: ci.yml  publish-crates.yml  release.yml
cmd/protoc-gen-rust-aip/: main.go
crates/protoc-gen-rn/: Cargo.toml
crates/protoc-gen-rn/src/: main.rs
crates/protoc-gen-rust-aip/: Cargo.toml
crates/protoc-gen-rust-aip/src/: main.rs
crates/resource-codegen/: Cargo.toml
crates/resource-codegen/src/: emit_rust.rs  lib.rs  parse_descriptor.rs  render.rs
crates/resource-types/: Cargo.toml
crates/resource-types/src/: error.rs  lib.rs  pattern.rs  traits.rs
examples/: Cargo.toml  README.md  buf.gen.yaml
examples/as-lib/: Cargo.toml  buf.gen.yaml
examples/as-lib/proto/: bookstore.proto  optional_test.proto
examples/as-lib/src/: lib.rs
examples/comprehensive/: Cargo.toml  buf.gen.yaml
examples/comprehensive/examples/: comprehensive_usage.rs
examples/comprehensive/proto/: resources.proto
examples/proto/: library.proto
examples/src/: lib.rs  main.rs
examples/test-app/: Cargo.toml  README.md
examples/test-app/src/: main.rs
internal/genaip/: plugin.go  resourcename.go  version.go
pkg/resourcename/: resourcename.go
scripts/: build-and-test.sh  bump-version.sh  make-release.sh  release.sh
tools/: test_types.go
tools/cmd/test_types/: main.go
