[workspace]
members = [
    "crates/protoc-gen-rust-aip",
    "crates/resource-codegen",
    "crates/resource-types",
    "examples/comprehensive",
]
resolver = "2"

[workspace.dependencies]
# Core dependencies
prost = "0.13"
prost-types = "0.13"
prost-build = "0.13"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"

# Parsing and text processing
regex = "1.0"
heck = "0.5"        # For case conversion
quote = "1.0"
proc-macro2 = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Code formatting  
syn = { version = "2.0", features = ["full"] }
prettyplease = "0.2"

# Testing
tokio-test = "0.4"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
