[package]
name = "comprehensive-example"
version = "0.1.0"
edition = "2021"
description = "Comprehensive example demonstrating protoc-gen-rust-aip generated resource names"

[lib]
name = "comprehensive_example"

[[bin]]
name = "comprehensive-example"
path = "src/main.rs"

[dependencies]
# No external dependencies needed for the generated resource names
# They use only std library types
