[package]
name = "protoc-gen-rn"
version = "0.1.0"
edition = "2021"
description = "Protoc plugin for generating Rust resource name helpers from Google API annotations"
license = "MIT OR Apache-2.0"

[[bin]]
name = "protoc-gen-rn"
path = "src/main.rs"

[dependencies]
resource-codegen = { path = "../resource-codegen" }
prost = { workspace = true }
prost-types = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
