[package]
name = "protoc-gen-rust-aip"
version = "0.1.1"
edition = "2021"
description = "Protoc plugin for generating Rust AIP helpers from Google API annotations"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/protoc-gen-rust-aip/protoc-gen-rust-aip"
repository = "https://github.com/protoc-gen-rust-aip/protoc-gen-rust-aip"
documentation = "https://docs.rs/protoc-gen-rust-aip"
readme = "../../README.md"
keywords = ["protobuf", "grpc", "google-api", "aip", "resource"]
categories = ["development-tools", "encoding"]

[[bin]]
name = "protoc-gen-rust-aip"
path = "src/main.rs"

[dependencies]
resource-codegen = { version = "0.1.1", path = "../resource-codegen" }
prost = { workspace = true }
prost-types = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
