[package]
name = "resource-codegen"
version = "0.1.0"
edition = "2021"
description = "Core library for parsing protobuf descriptors and generating Rust resource name code"
license = "MIT OR Apache-2.0"

[dependencies]
resource-types = { path = "../resource-types" }
prost = { workspace = true }
prost-types = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
regex = { workspace = true }
heck = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
prettyplease = { workspace = true }
syn = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
