[package]
name = "resource-codegen"
version = "0.1.1"
edition = "2021"
description = "Core library for parsing protobuf descriptors and generating Rust resource name code"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/protoc-gen-rust-aip/protoc-gen-rust-aip"
repository = "https://github.com/protoc-gen-rust-aip/protoc-gen-rust-aip"
documentation = "https://docs.rs/resource-codegen"
readme = "../../README.md"
keywords = ["protobuf", "grpc", "google-api", "aip", "resource"]
categories = ["development-tools", "encoding"]

[dependencies]
resource-types = { version = "0.1.1", path = "../resource-types" }
prost = { workspace = true }
prost-types = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
regex = { workspace = true }
heck = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
prettyplease = { workspace = true }
syn = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
