[package]
name = "comprehensive-example"
version = "0.1.0"
edition = "2021"
description = "Comprehensive example showcasing all resource name patterns"

[[example]]
name = "comprehensive_usage"
path = "examples/comprehensive_usage.rs"

[dependencies]
# Core resource types
resource-types = { path = "../../crates/resource-types" }

# Protobuf support
prost = { workspace = true }
prost-types = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Testing
tokio-test = { workspace = true }

[build-dependencies]
# Not using build.rs for now - using buf generate directly
